# fast-pc-solver

./: Cargo.toml
benches/: movegen.rs  random_jaws.rs
src/: consts.rs  four_line_board.rs  interface_board.rs  lib.rs  solver.rs  types.rs
