[package]
name = "fast_pc_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "random_jaws"
harness = false
